<resources>
    <string name="app_name">BaseHilt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_done">Done</string>
    <string name="socket_time_out">Sorry, Unable to connect server. Please try again</string>
    <string name="internal_server_error_500">Oops!! There is some problem with request. Please try again</string>
    <string name="logout_401">You have been logged out because you signed in on another device OR your account is inactive</string>
    <string name="no_internet">No Internet Connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plaus1">+1</string>
    <string name="login">Login</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_valid_password">Please Enter A valid Password</string>
    <string name="password">Password</string>
    <string name="create_account">create Account</string>
    <string name="welcome_to_the_tremendous_world_of_graph_ql">Welcome to the tremendous world of Graph QL!</string>
    <string name="please_enter_minimum_password">Please Enter Minimum 8 Character Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_enter_first_name">Please Enter first name</string>
    <string name="please_enter_date_of_birth">Please Enter Date of birth</string>
    <string name="please_enter_last_name">"Please Enter last name "</string>
    <string name="mobile_number_max_length_exceeded">mobile should be of 11 characters</string>
    <string name="password_min_length_error">min 8 characters should be there</string>
    <string name="password_invalid_format_error">invalid password format</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_mismatch_error">Password and confirm password do not match</string>
    <string name="please_enter_email">please enter email</string>
    <string name="email_invalid_format_error">email improper</string>
    <string name="the_comparison_between_livedata_stateflow_shared_flow_amp_normal_flow"><![CDATA[The Comparison between Livedata Stateflow Shared flow & Normal flow]]></string>
    <string name="livedata">LiveData</string>
    <string name="stateflow">StateFlow</string>
    <string name="sharedflow">SharedFlow</string>
    <string name="flow">Flow</string>

</resources>