<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginHandler"
            type="com.base.hilt.ui.login.LoginHandler" />

        <variable
            name="validatorData"
            type="com.base.hilt.ui.login.LoginValidator" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.auth.LoginFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:textColor="@color/black"
            android:text="@string/login"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPro" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/welcome_to_the_tremendous_world_of_graph_ql"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:textColorHint="@color/black"
            android:layout_margin="20dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#D2691E"
            app:hintTextColor="#D2691E"
            app:layout_constraintStart_toStartOf="@id/tvLogin"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:maxLines="1"
                android:inputType="phone"
                android:maxLength="12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={validatorData.username}"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:layout_margin="20dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#D2691E"
            app:hintTextColor="#D2691E"
            app:layout_constraintStart_toStartOf="@id/tilUserName"
            app:layout_constraintTop_toBottomOf="@+id/tilUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:maxLines="1"
                android:text="@={validatorData.password}"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="20dp"
            android:background="@drawable/gradient"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/login"
            android:onClick="@{()->loginHandler.onLoginClick(validatorData)}"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvcreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/create_account"
            android:onClick="@{()->loginHandler.navigateToCreateAccount()}"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>